# ctci-python

./: LICENSE  README.md  pyproject.toml
ctci_python/chapter01/: palindrome_permutation.py  permutation.py  unique.py  urlify.py
ctci_python/chapter05/: insertion.py
ctci_python/chapter06/: 100_lockers.md  ants_on_a_triangle.md  apocalypse.md  apocalypse.py  basketball.md  blue-eyed_island.md  dominos.md  jugs_of_water.md  pill.md  poison.md  poison.py
tests/chapter01/: test_palindrome_permutation.py  test_permutation.py  test_unique.py  test_urlify.py
tests/chapter05/: __init__.py  test_insertion.py
