[tool.poetry]
name = "ctci-python"
version = "0.1.0"
description = ""
authors = ["Darko Trifunovski <dtrifuno@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
